# notabene

./: .gitattributes  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
benches/: lint.rs
src/: ast.rs  changelog.rs  cli.rs  diagnostic.rs  error.rs  ir.rs  lib.rs  linter.rs  location.rs  locator.rs  main.rs  parser.rs  prelude.rs  profile.rs  rule.rs  ruleset.rs  span.rs  unist.rs
src/ast/: block.rs  parser.rs
src/ast/snapshots/: notabene__ast__parser__tests__parse_h1-2.snap  notabene__ast__parser__tests__parse_h1.snap  notabene__ast__parser__tests__parse_h2-2.snap  notabene__ast__parser__tests__parse_h2-3.snap  notabene__ast__parser__tests__parse_h2-4.snap  notabene__ast__parser__tests__parse_h2-5.snap  notabene__ast__parser__tests__parse_h2-6.snap  notabene__ast__parser__tests__parse_h2-7.snap  notabene__ast__parser__tests__parse_h2-8.snap  notabene__ast__parser__tests__parse_h2.snap  notabene__ast__parser__tests__parse_h3.snap  notabene__ast__parser__tests__parse_list.snap  notabene__ast__parser__tests__parse_paragraph.snap
src/changelog/: owned.rs  parsed.rs  traits.rs  v2.rs
src/changelog/snapshots/: notabene__changelog__v1__tests__from_ir.snap
src/changelog/v2/: owned.rs  parsed.rs  prelude.rs  traits.rs
src/cli/: commands.rs  config.rs  error.rs  renderer.rs  report.rs
src/cli/report/: context.rs  format.rs  formatter.rs
src/linter/: check.rs  checks.rs  macros.rs
src/linter/checks/: changes.rs  content.rs  links.rs  preamble.rs  releases.rs  structure.rs  unreleased.rs
src/linter/checks/snapshots/: notabene__linter__checks__changes__tests__duplicate_change_type-2.snap  notabene__linter__checks__changes__tests__duplicate_change_type.snap  notabene__linter__checks__changes__tests__invalid_change_type-2.snap  notabene__linter__checks__changes__tests__invalid_change_type.snap  notabene__linter__checks__content__tests__duplicate_change_type-2.snap  notabene__linter__checks__content__tests__empty_section-2.snap  notabene__linter__checks__content__tests__empty_section-3.snap  notabene__linter__checks__content__tests__empty_section.snap  (+31 more)
src/snapshots/: notabene__changelog__tests__from_ir.snap  notabene__linter__tests__duplicate_change_type-2.snap  notabene__linter__tests__duplicate_change_type.snap  notabene__linter__tests__duplicate_title-2.snap  notabene__linter__tests__duplicate_title.snap  notabene__linter__tests__duplicate_unreleased-2.snap  notabene__linter__tests__duplicate_unreleased.snap  notabene__linter__tests__empty_section-2.snap  notabene__linter__tests__empty_section.snap  notabene__linter__tests__invalid_change_type-2.snap  notabene__linter__tests__invalid_change_type.snap  notabene__linter__tests__invalid_date-2.snap  notabene__linter__tests__invalid_date.snap  notabene__linter__tests__invalid_yanked-2.snap  notabene__linter__tests__invalid_yanked.snap  notabene__linter__tests__missing_date-2.snap  notabene__linter__tests__missing_date.snap  notabene__linter__tests__missing_title-2.snap  notabene__linter__tests__missing_title.snap  notabene__linter__tests__missing_unreleased-2.snap  notabene__linter__tests__missing_unreleased.snap  notabene__linter__tests__unreleased_not_first-2.snap  notabene__parser__tests__parse.snap
src/span/: index.rs  iter.rs  locator.rs  ranged.rs  unist.rs
