[package]
name = "notabene"
version = "0.2.0"
edition = "2024"
default-run = "nb"
license = "MIT"
description = "A fast linter for changelogs in Keep a Changelog format"
readme = "README.md"
homepage = "https://github.com/benwebber/notabene"
repository = "https://github.com/benwebber/notabene"
keywords = ["changelog", "lint"]
categories = ["command-line-utilities"]


[dependencies]
pulldown-cmark = "0.13.0"
version-compare = "0.2.0"
clap = { version = "4.5.45", features = ["cargo"], optional = true }
owo-colors = { version = "4.2.2", features = ["supports-colors"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.143", optional = true }
toml = { version = "0.9.5", features = ["parse", "serde"], optional = true }

[dev-dependencies]
criterion = "0.3"
insta = { version = "1.43.1", features = ["redactions", "yaml"] }

[features]
cli = ["serde", "dep:clap", "dep:serde_json", "dep:owo-colors", "dep:toml"]
serde = ["dep:serde"]

[lib]
name = "notabene"
path = "src/lib.rs"

[[bin]]
name = "nb"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "lint"
harness = false

[profile.dev.package]
insta.opt-level = 3
